--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
+        "phpoffice/phpspreadsheet": "^1.21",
         "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-permission": "^5.5"
     },
