--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5",
         "phpoffice/phpspreadsheet": "^1.21",
+        "pragmarx/google2fa": "^8.0",
+        "pragmarx/google2fa-qrcode": "^3.0",
         "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-translatable": "^4.6"
